<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_sdm_trajectory_optimizer</name>
  <version>0.0.0</version>
  <description>The asr_sdm_trajectory_optimizer package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>asr_sdm_esdf_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
